version/0.37/_sources/api/solver/_autosummary/settings/species.rst.txt
:orphan:

.. _species:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.species
    :show-inheritance:

.. rubric:: Attributes

==========================================================================   ================================================

Attribute                                                                                                             Summary

==========================================================================   ================================================
:ref:`model <model_5>`                                                                                         Species model.

:ref:`options <options_2>`                                                                      Species model options object.

:ref:`reactions <reactions>`                                                                                       Reactions.

:ref:`wall_surface_options <wall_surface_options>`                                             Wall surface reaction options.

:ref:`turb_chem_interaction <turb_chem_interaction>`                                  Turbulence chemistry interaction model.

:ref:`turb_chem_interaction_options <turb_chem_interaction_options>`                Turbulence chemistry interaction options.

:ref:`species_transport_expert_options <species_transport_expert_options>`                  Species transport expert options.

:ref:`edc_options <edc_options>`                                                                           EDC model options.

:ref:`tfm_options <tfm_options>`                                                                           TFM model options.

:ref:`chemistry_solver <chemistry_solver>`                                                                  Chemistry solver.

:ref:`integration_parameters <integration_parameters>`                           Species model integration parameters option.

:ref:`partially_premixed_model_options <partially_premixed_model_options>`                  Partially Premixed Model Options.

:ref:`water_corrosion_pre <water_corrosion_pre>`                                          Water corrosion preprocessing tool.

==========================================================================   ================================================

.. rubric:: Methods

======================================   =====================

Method                                                 Summary

======================================   =====================
:ref:`import_chemkin <import_chemkin>`       Import Mechanism.

======================================   =====================

.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`models <models>`       'models' child.

======================   ===================

