version/0.42/_sources/api/solver/_autosummary/settings/species.rst.txt
:orphan:

.. _species:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.species
    :show-inheritance:

.. rubric:: Attributes

==========================================================================================   ==================================================================================================================================

Attribute                                                                                                                                                                                                               Summary

==========================================================================================   ==================================================================================================================================
:ref:`model <model_5>`                                                                                                                                                                                           Species model.

:ref:`options <options_2>`                                                                                                                                                                        Species model options object.

:ref:`reactions <reactions>`                                                                                                                                                                                         Reactions.

:ref:`chemistry_solver <chemistry_solver>`                                                                                                                                                                    Chemistry solver.

:ref:`wall_surface_options <wall_surface_options>`                                                                                                                                               Wall surface reaction options.

:ref:`turb_chem_interaction_options <turb_chem_interaction_options>`                             The options for turbulence-chemistry interaction, which influence how turbulence affects chemical reactions in the simulation.

:ref:`species_transport_expert_options <species_transport_expert_options>`                                                                                                                    Species transport expert options.

:ref:`edc_options <edc_options>`                                                                                                                                                                             EDC model options.

:ref:`tfm_options <tfm_options>`                                                                                                                                                                             TFM model options.

:ref:`integration_parameters <integration_parameters>`                                                                                                                             Species model integration parameters option.

:ref:`partially_premixed_model_options <partially_premixed_model_options>`                                                                                                                    Partially Premixed Model Options.

:ref:`partially_premixed_combustion_parameters <partially_premixed_combustion_parameters>`                                                                                            Partially Premixed Combustion Parameters.

:ref:`water_corrosion_pre <water_corrosion_pre>`                                                                                                                                            Water corrosion preprocessing tool.

:ref:`nox <nox>`                                                                                                                                                                                              NOx model object.

:ref:`inert_model <inert_model>`                                                                                                                                      Inert model for non-premixed/partial-premixed combustion.

==========================================================================================   ==================================================================================================================================

.. rubric:: Methods

======================================   =====================

Method                                                 Summary

======================================   =====================
:ref:`import_chemkin <import_chemkin>`       Import Mechanism.

======================================   =====================

.. rubric:: Included in:

======================   =================================================================================================

Parent                                                                                                             Summary

======================   =================================================================================================
:ref:`models <models>`       Enables and configures physical models such as turbulence, energy, multiphase, and radiation.

======================   =================================================================================================

